# netbox-vitalqip

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/: FUNDING.yml
.github/workflows/: release.yml
netbox_vitalqip/: __init__.py  forms.py  models.py  navigation.py  qip_client.py  urls.py  views.py
netbox_vitalqip/migrations/: 0001_initial.py  0002_mark_stub_model_private.py
netbox_vitalqip/templates/netbox_vitalqip/: device_tab.html  device_tab_content.html  endpoint_tab.html  prefix_import.html  prefix_import_preview.html  settings.html  vm_tab.html
